MGDSTRM-1598 making status and resync consistent
making the logic consistent between managedkafka and managedkafkaagent
adding a check for a status change